# webrtc

./: ICCExtenedAudio.cpp  ICCExtenedAudio.h  Info.plist  MacExtenalAudio.cpp  MacExtenalAudio.h  MacExtenalAudio.mm  audio_device_mac.cpp  audio_device_mac.h  audio_mixer_manager_mac.cc  audio_mixer_manager_mac.h  macAudio.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  pa_ringbuffer.c
obs_capture/mac-capture/: CMakeLists.txt  NoiseSuppression.h  audio-device-enum.c  mac-audio.c  mac-display-area-capture.m  mac-helpers.h  plugin-main.c
